2000-08-04  Kevin Buettner  <kevinb@redhat.com>

	* symtab.h (fixup_psymbol_section): Declare.
	* symtab.c (fixup_psymbol_section): Make extern.
	(fixup_section): Fix up section as well as bfd_section.
	* objfiles.c (objfile_relocate): Call fixup_symbol_section
	or fixup_psymbol_section before attempting to access
	the SYMBOL_SECTION component of a symbol or partial symbol.

2000-08-04  Kevin Buettner  <kevinb@redhat.com>

	* minsyms.c (build_minimal_symbol_hash_tables): New function.
	(compact_minimal_symbols): Don't construct hash tables here.
	(install_minimal_symbols): Instead, construct them here.
	(msymbols_sort): And rebuild them here too.

	* dwarf2read.c (struct comp_unit_head): Add fields offset_size
	and initial_length_size.  Change type of ``length'' field to long.
	(read_initial_length, read_offset): New functions.
	(dwarf2_build_psymtabs_easy): Call read_initial_length() instead
	of just reading 4 bytes.
	(read_comp_unit_head): Likewise; also, call read_offset() to
	fetch the offset instead of just reading 4 bytes.
	(dwarf_decode_lines): Likewise.
	(read_comp_unit_head): Fix internal error message so it
	accurately reflects the function in which the error occurred.
	(dwarf2_build_psymtabs_hard): Properly account for size of the
	initial length field in the section.
	(read_attribute, dwarf2_get_ref_die_offset): Add a case for
	DW_ORM_ref8.
	(dwarf2_build_psymtabs_hard, psymtabs_to_symtab_1): Don't
	assume that the .text section will have index 0 in the
	section_offsets table.

Fri Aug  4 18:00:41 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote.c (enum Z_packet_type): Define.
	(remote_protocol_Z): Change to an array of size NR_Z_PACKET_TYPES.
	(remote_insert_watchpoint): Check watchpoint type.
	(watchpoint_to_Z_packet): New function.
	(enum packet_result): Define.
	(packet_ok): New function. Return enum packet_result.
	(init_all_packet_configs): New function.
	(remote_open_1, remote_async_open_1, remote_cisco_open): Use